@@ -5,22 +5,22 @@ import com.example.parisroutefinderdsaca2.DataStructure.GraphLink;
 import com.example.parisroutefinderdsaca2.DataStructure.GraphNode;
 import com.thoughtworks.xstream.XStream;
 import com.thoughtworks.xstream.io.xml.DomDriver;
+import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
+import javafx.geometry.Point2D;
 import javafx.scene.Cursor;
 import javafx.scene.control.*;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.AnchorPane;
-import javafx.scene.layout.BackgroundFill;
 import javafx.scene.paint.Color;
 import javafx.scene.shape.Circle;
 import javafx.scene.shape.Line;
 import javafx.scene.text.Text;
 import org.jetbrains.annotations.NotNull;
 
-import javafx.geometry.Point2D;
 import java.io.*;
 import java.net.URL;
 import java.util.*;
@@ -52,7 +52,7 @@ public class RouteFinder implements Initializable {
 
     public Slider historicalVal;
     public Label visitLabel = new Label();
-    public ComboBox<GraphNode<String>> visitBox;
+    public ComboBox<GraphNode<String>> waypointsBox;
     Color visit = Color.rgb(0, 191, 99);
     Color route = Color.rgb(13, 137, 232);
     Color landMark = Color.rgb(0, 74, 173);
@@ -65,7 +65,7 @@ public class RouteFinder implements Initializable {
     private boolean isMapPopulated = false;
     public Map<String, GraphNode<String>> graphNodes = new HashMap<>();
     public Set<GraphNode<String>> avoidNodes = new HashSet<>();
-    public Set<GraphNode<String>> visitNodes = new HashSet<>();
+    public List<GraphNode<String>> waypointNodes = new ArrayList<>();
 
     @FXML
     public void scene2() throws IOException {
@@ -113,7 +113,7 @@ public class RouteFinder implements Initializable {
     public void populateMap() {
         if (!isMapPopulated) {
             avoidBox.getItems().add(new GraphNode<>("AVOID NONE", false, 0, 0, 0));
-            visitBox.getItems().add(new GraphNode<>("MUST VISIT NONE", false, 0, 0, 0));
+            waypointsBox.getItems().add(new GraphNode<>("MUST VISIT NONE", false, 0, 0, 0));
 
             for (GraphNode<String> node : graphNodes.values()) {
                 drawNode(node,landMark);
@@ -122,7 +122,7 @@ public class RouteFinder implements Initializable {
                     startPointBox.getItems().add(node);
                     endPointBox.getItems().add(node);
                     avoidBox.getItems().add(node);
-                    visitBox.getItems().add(node);
+                    waypointsBox.getItems().add(node);
 
                 }
             }
@@ -143,6 +143,7 @@ public class RouteFinder implements Initializable {
         }
     }
 
+
     public void showSelectedNodes() {
 
         if (startPointBox == null || endPointBox == null) {
@@ -162,7 +163,7 @@ public class RouteFinder implements Initializable {
                 drawNode(node, route);
             } else {
                 drawNode(node, landMark);
-            }if (visitNodes != null && visitNodes.contains(node)) {
+            }if (waypointNodes != null && waypointNodes.contains(node)) {
                 drawNode(node, visit);
             }
         }
@@ -199,6 +200,11 @@ public class RouteFinder implements Initializable {
 
         mapPane.getChildren().addAll(nodeCircle, nodeRing);
     }
+
+
+
+
+
 
     public void toolTipHover(@NotNull MouseEvent e) {
         double mouseX = e.getX();
@@ -240,10 +246,13 @@ public class RouteFinder implements Initializable {
 
 
 
+
+
+
     public void addToAvoid() {
         GraphNode<String> selectedItem = avoidBox.getSelectionModel().getSelectedItem();
 
-        if (selectedItem != null && selectedItem.getName().equals("AVOID NONE") && !visitNodes.contains(selectedItem)) {
+        if (selectedItem != null && selectedItem.getName().equals("AVOID NONE") && !waypointNodes.contains(selectedItem)) {
             avoidNodes.clear();
             avoidingLabel.setText(null);
             printAvoidNodes();  // Print the updated avoidNodes
@@ -251,7 +260,7 @@ public class RouteFinder implements Initializable {
             return;
         }
 
-        if (selectedItem != null&& !visitNodes.contains(selectedItem) && !startPointBox.getSelectionModel().getSelectedItem().getName().equals(selectedItem.getName()) && !endPointBox.getSelectionModel().getSelectedItem().getName().equals(selectedItem.getName())) {
+        if (selectedItem != null&& !waypointNodes.contains(selectedItem) && !startPointBox.getSelectionModel().getSelectedItem().getName().equals(selectedItem.getName()) && !endPointBox.getSelectionModel().getSelectedItem().getName().equals(selectedItem.getName())) {
             avoidNodes.add(selectedItem);
             printAvoidNodes();  // Print the updated avoidNodes
             showSelectedNodes();  // Show the newly avoided node
@@ -259,10 +268,10 @@ public class RouteFinder implements Initializable {
     }
 
     public void addToVisit() {
-        GraphNode<String> selectedItem = visitBox.getSelectionModel().getSelectedItem();
+        GraphNode<String> selectedItem = waypointsBox.getSelectionModel().getSelectedItem();
 
-        if (selectedItem != null && visitBox.getItems().get(0).getName().equals(selectedItem.getName())) {
-            visitNodes.clear();
+        if (selectedItem != null && waypointsBox.getItems().getFirst().getName().equals(selectedItem.getName())) {
+            waypointNodes.clear();
             visitLabel.setText(null);
             printVisitNodes();  // Print the updated avoidNodes
             showSelectedNodes();
@@ -271,7 +280,7 @@ public class RouteFinder implements Initializable {
 
         if (selectedItem != null&& !avoidNodes.contains(selectedItem) && !startPointBox.getSelectionModel().getSelectedItem().getName().equals(selectedItem.getName()) && !endPointBox.getSelectionModel().getSelectedItem().getName().equals(selectedItem.getName())) {
 
-            visitNodes.add(selectedItem);
+            waypointNodes.add(selectedItem);
             printVisitNodes();  // Print the updated avoidNodes
             showSelectedNodes();  // Show the newly avoided node
         }
@@ -294,13 +303,12 @@ public class RouteFinder implements Initializable {
         }
 
     }
-
     private void printVisitNodes() {
         String s = "VISITING :  ";
 
-        if (!visitNodes.isEmpty()) {
+        if (!waypointNodes.isEmpty()) {
 
-            for (GraphNode<String> a : visitNodes) {
+            for (GraphNode<String> a : waypointNodes) {
                 s += a.getName() + ",  ";
 
             }
@@ -390,228 +398,7 @@ public class RouteFinder implements Initializable {
 
 
     public void populateDatabase() {
-//        graphNodes.put("Eiffel Tower", new GraphNode<>("Eiffel Tower", true,5,126,377)); //A
-//        graphNodes.put("Arc de Triomphe", new GraphNode<>("Arc de Triomphe", true,5,80,220)); //B
-//        graphNodes.put("The Louvre", new GraphNode<>("The Louvre", true,4,133,78)); //C
-//        graphNodes.put("Grand Palais", new GraphNode<>("Grand Palais", true,3,275,285)); //D
-//        graphNodes.put("Notre-Dame Cathedral", new GraphNode<>("Notre-Dame Cathedral", true,3,309,270)); //E
-//        graphNodes.put("Champs-Élysées", new GraphNode<>("Champs-Élysées", true,3,358,192)); //F
-//        graphNodes.put("Opera Garnier", new GraphNode<>("Opera Garnier", true,3,342,349)); //G
-//        graphNodes.put("Place de la Concorde", new GraphNode<>("Place de la Concorde", true,3,411,436)); //H
-//        graphNodes.put("River Seine", new GraphNode<>("River Seine", true,2,349,77)); //I
-//        graphNodes.put("Basilica of the Sacré-Coeur", new GraphNode<>("Basilica of the Sacré-Coeur", true,2,447,31)); //J
-//        graphNodes.put("The Centre Pompidou", new GraphNode<>("The Centre Pompidou", true,2,505,355)); //K
-//        graphNodes.put("Pont Alexandre III", new GraphNode<>("Pont Alexandre III", true,5,659,326)); //L
-//        graphNodes.put("Musée d’Orsay", new GraphNode<>("Musée d’Orsay", true,5,532,248)); //M
-//        graphNodes.put("The Panthéon", new GraphNode<>("The Panthéon", true,5,572,98)); //M
-//
-//        graphNodes.put("N1", new GraphNode<>("N1", false, 0,108,370));
-//        graphNodes.put("N2", new GraphNode<>("N2", false, 0,93,363));
-//        graphNodes.put("N3", new GraphNode<>("N3", false, 0,85,278));
-//        graphNodes.put("N4", new GraphNode<>("N4", false, 0,73,270));
-//        graphNodes.put("N5", new GraphNode<>("N5", false, 0,96,236));
-//        graphNodes.put("N6", new GraphNode<>("N6", false, 0,133,274));
-//        graphNodes.put("N7", new GraphNode<>("N7", false, 0,224,262));
-//        graphNodes.put("N8", new GraphNode<>("N8", false, 0,172,240));
-//        graphNodes.put("N9", new GraphNode<>("N9", false, 0,367,235));
-//        graphNodes.put("N10", new GraphNode<>("N10", false, 0,151,395));
-//        graphNodes.put("N11", new GraphNode<>("N11", false, 0,197,356));
-//        graphNodes.put("N12", new GraphNode<>("N12", false, 0,240,331));
-//        graphNodes.put("N13", new GraphNode<>("N13", false, 0,288,309));
-//        graphNodes.put("N14", new GraphNode<>("N14", false, 0,320,360));
-//        graphNodes.put("N15", new GraphNode<>("N15", false, 0,366,436));
-//        graphNodes.put("N16", new GraphNode<>("N16", false, 0,331,288));
-//        graphNodes.put("N17", new GraphNode<>("N17", false, 0,383,318));
-//        graphNodes.put("N18", new GraphNode<>("N18", false, 0,398,383));
-//        graphNodes.put("N19", new GraphNode<>("N19", false, 0,366,436));
-//        graphNodes.put("N20", new GraphNode<>("N20", false, 0,89,130));
-//        graphNodes.put("N21", new GraphNode<>("N21", false, 0,366,436));
-//        graphNodes.put("N22", new GraphNode<>("N22", false, 0,145,139));
-//        graphNodes.put("N23", new GraphNode<>("N23", false, 0,366,436));
-//        graphNodes.put("N24", new GraphNode<>("N24", false, 0,188,45));
-//        graphNodes.put("N25", new GraphNode<>("N25", false, 0,334,114));
-//        graphNodes.put("N26", new GraphNode<>("N26", false, 0,334,114));
-//        graphNodes.put("N27", new GraphNode<>("N27", false, 0,323,141));
-//        graphNodes.put("N28", new GraphNode<>("N28", false, 0,387,155));
-//        graphNodes.put("N29", new GraphNode<>("N29", false, 0,401,52));
-//        graphNodes.put("N30", new GraphNode<>("N30", false, 0,225,124));
-//        graphNodes.put("N31", new GraphNode<>("N31", false, 0,221,62));
-//        graphNodes.put("N32", new GraphNode<>("N32", false, 0,476,134));
-//        graphNodes.put("N33", new GraphNode<>("N33", false, 0,396,131));
-//        graphNodes.put("N34", new GraphNode<>("N34", false, 0,481,186));
-//        graphNodes.put("N35", new GraphNode<>("N35", false, 0,467,216));
-//        graphNodes.put("N36", new GraphNode<>("N36", false, 0,422,337));
-//        graphNodes.put("N37", new GraphNode<>("N37", false, 0,268,389));
-//        graphNodes.put("N38", new GraphNode<>("N38", false, 0,360,475));
-//        graphNodes.put("N39", new GraphNode<>("N39", false, 0,531,408));
-//        graphNodes.put("N40", new GraphNode<>("N40", false, 0,508,300));
-//        graphNodes.put("N41", new GraphNode<>("N41", false, 0,493,249));
-//        graphNodes.put("N42", new GraphNode<>("N42", false, 0,566,237));
-//        graphNodes.put("N43", new GraphNode<>("N43", false, 0,645,345));
-//        graphNodes.put("N44", new GraphNode<>("N44", false, 0,530,409));
-//        graphNodes.put("N45", new GraphNode<>("N45", false, 0,491,421));
-//        graphNodes.put("N46", new GraphNode<>("N46", false, 0,479,454));
-//        graphNodes.put("N47", new GraphNode<>("N47", false, 0,236,171));
-//        graphNodes.put("N48", new GraphNode<>("N48", false, 0,454,134));
-//        graphNodes.put("N49", new GraphNode<>("N49", false, 0,438,170));
-//        graphNodes.put("N50", new GraphNode<>("N50", false, 0,571,209));
-//        graphNodes.put("N51", new GraphNode<>("N51", false, 0,581,125));
-//        graphNodes.put("N52", new GraphNode<>("N52", false, 0,624,286));
-//        graphNodes.put("N53", new GraphNode<>("N53", false, 0,597,288));
-//        graphNodes.put("N54", new GraphNode<>("N54", false, 0,605,222));
-//        graphNodes.put("N55", new GraphNode<>("N55", false, 0,523,6));
-//        graphNodes.put("N56", new GraphNode<>("N56", false, 0,563,332));
-//        graphNodes.put("N57", new GraphNode<>("N57", false, 0,580,298));
-//        graphNodes.put("N58", new GraphNode<>("N58", false, 0,249,212));
-//        graphNodes.put("N59", new GraphNode<>("N59", false, 0,286,216));
-//        graphNodes.put("N60", new GraphNode<>("N60", false, 0,414,253));
-//        graphNodes.put("N61", new GraphNode<>("N61", false, 0,455,248));
-//        graphNodes.put("N62", new GraphNode<>("N62", false, 0,233,432));
-//        graphNodes.put("N63", new GraphNode<>("N63", false, 0,445,153));
-//        graphNodes.put("N64", new GraphNode<>("N64", false, 0,367,45));
-//        graphNodes.put("N65", new GraphNode<>("N65", false, 0,318,163));
-//        graphNodes.put("N66", new GraphNode<>("N66", false, 0,306,30));
-//        graphNodes.put("N67", new GraphNode<>("N67", false, 0,330,126));
-//        graphNodes.put("N68", new GraphNode<>("N68", false, 0,339,104));
-//        graphNodes.put("N69", new GraphNode<>("N69", false, 0,460,77));
-//        graphNodes.put("N70", new GraphNode<>("N70", false, 0,460,53));
-//        graphNodes.put("N71", new GraphNode<>("N71", false, 0,529,88));
-//        graphNodes.put("N72", new GraphNode<>("N72", false, 0,111,97));
-//
-//        graphNodes.get("N1").connectToNodeUndirected(graphNodes.get("Eiffel Tower"), calculateDistance(graphNodes.get("N1"), graphNodes.get("Eiffel Tower")));
-//        graphNodes.get("N2").connectToNodeUndirected(graphNodes.get("N1"), calculateDistance(graphNodes.get("N2"), graphNodes.get("N1")));
-//        graphNodes.get("N3").connectToNodeUndirected(graphNodes.get("N2"), calculateDistance(graphNodes.get("N3"), graphNodes.get("N2")));
-//        graphNodes.get("N4").connectToNodeUndirected(graphNodes.get("N3"), calculateDistance(graphNodes.get("N4"), graphNodes.get("N3")));
-//        graphNodes.get("N5").connectToNodeUndirected(graphNodes.get("N4"), calculateDistance(graphNodes.get("N5"), graphNodes.get("N4")));
-//        graphNodes.get("Arc de Triomphe").connectToNodeUndirected(graphNodes.get("N5"), calculateDistance(graphNodes.get("Arc de Triomphe"), graphNodes.get("N5")));
-//        graphNodes.get("N3").connectToNodeUndirected(graphNodes.get("N6"), calculateDistance(graphNodes.get("N3"), graphNodes.get("N6")));
-//        graphNodes.get("N6").connectToNodeUndirected(graphNodes.get("N5"), calculateDistance(graphNodes.get("N6"), graphNodes.get("N5")));
-//        graphNodes.get("N2").connectToNodeUndirected(graphNodes.get("N6"), calculateDistance(graphNodes.get("N2"), graphNodes.get("N6")));
-//        graphNodes.get("N6").connectToNodeUndirected(graphNodes.get("N7"), calculateDistance(graphNodes.get("N6"), graphNodes.get("N7")));
-//        graphNodes.get("N7").connectToNodeUndirected(graphNodes.get("Grand Palais"), calculateDistance(graphNodes.get("N7"), graphNodes.get("Grand Palais")));
-//        graphNodes.get("N1").connectToNodeUndirected(graphNodes.get("Grand Palais"), calculateDistance(graphNodes.get("N1"), graphNodes.get("Grand Palais")));
-//        graphNodes.get("N7").connectToNodeUndirected(graphNodes.get("N8"), calculateDistance(graphNodes.get("N7"), graphNodes.get("N8")));
-//        graphNodes.get("Grand Palais").connectToNodeUndirected(graphNodes.get("Notre-Dame Cathedral"), calculateDistance(graphNodes.get("Grand Palais"), graphNodes.get("Notre-Dame Cathedral")));
-//        graphNodes.get("Notre-Dame Cathedral").connectToNodeUndirected(graphNodes.get("N9"), calculateDistance(graphNodes.get("Notre-Dame Cathedral"), graphNodes.get("N9")));
-//        graphNodes.get("N9").connectToNodeUndirected(graphNodes.get("Champs-Élysées"), calculateDistance(graphNodes.get("N9"), graphNodes.get("Champs-Élysées")));
-//        graphNodes.get("Grand Palais").connectToNodeUndirected(graphNodes.get("N59"), calculateDistance(graphNodes.get("Grand Palais"), graphNodes.get("N59")));
-//        graphNodes.get("Grand Palais").connectToNodeUndirected(graphNodes.get("N59"), calculateDistance(graphNodes.get("Grand Palais"), graphNodes.get("N59")));
-//        graphNodes.get("N59").connectToNodeUndirected(graphNodes.get("N58"), calculateDistance(graphNodes.get("N59"), graphNodes.get("N58")));
-//        graphNodes.get("N58").connectToNodeUndirected(graphNodes.get("N47"), calculateDistance(graphNodes.get("N58"), graphNodes.get("N47")));
-//        graphNodes.get("N47").connectToNodeUndirected(graphNodes.get("N65"), calculateDistance(graphNodes.get("N47"), graphNodes.get("N65")));
-//        graphNodes.get("N65").connectToNodeUndirected(graphNodes.get("Champs-Élysées"), calculateDistance(graphNodes.get("N65"), graphNodes.get("Champs-Élysées")));
-//        graphNodes.get("Champs-Élysées").connectToNodeUndirected(graphNodes.get("N27"), calculateDistance(graphNodes.get("Champs-Élysées"), graphNodes.get("N27")));
-//        graphNodes.get("Champs-Élysées").connectToNodeUndirected(graphNodes.get("N28"), calculateDistance(graphNodes.get("Champs-Élysées"), graphNodes.get("N28")));
-//        graphNodes.get("Notre-Dame Cathedral").connectToNodeUndirected(graphNodes.get("N16"), calculateDistance(graphNodes.get("Notre-Dame Cathedral"), graphNodes.get("N16")));
-//        graphNodes.get("N16").connectToNodeUndirected(graphNodes.get("Opera Garnier"), calculateDistance(graphNodes.get("N16"), graphNodes.get("Opera Garnier")));
-//        graphNodes.get("Opera Garnier").connectToNodeUndirected(graphNodes.get("N21"), calculateDistance(graphNodes.get("Opera Garnier"), graphNodes.get("N21")));
-//        graphNodes.get("Opera Garnier").connectToNodeUndirected(graphNodes.get("N18"), calculateDistance(graphNodes.get("Opera Garnier"), graphNodes.get("N18")));
-//        graphNodes.get("Champs-Élysées").connectToNodeUndirected(graphNodes.get("N41"), calculateDistance(graphNodes.get("Champs-Élysées"), graphNodes.get("N41")));
-//        graphNodes.get("N41").connectToNodeUndirected(graphNodes.get("Musée d’Orsay"), calculateDistance(graphNodes.get("N41"), graphNodes.get("Musée d’Orsay")));
-//        graphNodes.get("The Centre Pompidou").connectToNodeUndirected(graphNodes.get("N40"), calculateDistance(graphNodes.get("The Centre Pompidou"), graphNodes.get("N40")));
-//        graphNodes.get("N60").connectToNodeUndirected(graphNodes.get("N61"), calculateDistance(graphNodes.get("N60"), graphNodes.get("N61")));
-//        graphNodes.get("N61").connectToNodeUndirected(graphNodes.get("N35"), calculateDistance(graphNodes.get("N61"), graphNodes.get("N35")));
-//        graphNodes.get("N35").connectToNodeUndirected(graphNodes.get("N34"), calculateDistance(graphNodes.get("N35"), graphNodes.get("N34")));
-//        graphNodes.get("N18").connectToNodeUndirected(graphNodes.get("The Centre Pompidou"), calculateDistance(graphNodes.get("N18"), graphNodes.get("The Centre Pompidou")));
-//        graphNodes.get("N10").connectToNodeUndirected(graphNodes.get("N11"), calculateDistance(graphNodes.get("N10"), graphNodes.get("N11")));
-//        graphNodes.get("N11").connectToNodeUndirected(graphNodes.get("N12"), calculateDistance(graphNodes.get("N11"), graphNodes.get("N12")));
-//        graphNodes.get("N12").connectToNodeUndirected(graphNodes.get("N13"), calculateDistance(graphNodes.get("N12"), graphNodes.get("N13")));
-//        graphNodes.get("Grand Palais").connectToNodeUndirected(graphNodes.get("N13"), calculateDistance(graphNodes.get("Grand Palais"), graphNodes.get("N13")));
-//        graphNodes.get("N13").connectToNodeUndirected(graphNodes.get("N14"), calculateDistance(graphNodes.get("N13"), graphNodes.get("N14")));
-//        graphNodes.get("N14").connectToNodeUndirected(graphNodes.get("Opera Garnier"), calculateDistance(graphNodes.get("N14"), graphNodes.get("Opera Garnier")));
-//        graphNodes.get("N7").connectToNodeUndirected(graphNodes.get("N12"), calculateDistance(graphNodes.get("N7"), graphNodes.get("N12")));
-//        graphNodes.get("N12").connectToNodeUndirected(graphNodes.get("N37"), calculateDistance(graphNodes.get("N12"), graphNodes.get("N37")));
-//        graphNodes.get("N3").connectToNodeUndirected(graphNodes.get("N11"), calculateDistance(graphNodes.get("N3"), graphNodes.get("N11")));
-//        graphNodes.get("N11").connectToNodeUndirected(graphNodes.get("N37"), calculateDistance(graphNodes.get("N11"), graphNodes.get("N37")));
-//        graphNodes.get("N37").connectToNodeUndirected(graphNodes.get("N21"), calculateDistance(graphNodes.get("N37"), graphNodes.get("N21")));
-//        graphNodes.get("N62").connectToNodeUndirected(graphNodes.get("N37"), calculateDistance(graphNodes.get("N62"), graphNodes.get("N37")));
-//        graphNodes.get("N37").connectToNodeUndirected(graphNodes.get("N13"), calculateDistance(graphNodes.get("N37"), graphNodes.get("N13")));
-//        graphNodes.get("N13").connectToNodeUndirected(graphNodes.get("N16"), calculateDistance(graphNodes.get("N13"), graphNodes.get("N16")));
-//        graphNodes.get("N16").connectToNodeUndirected(graphNodes.get("N60"), calculateDistance(graphNodes.get("N16"), graphNodes.get("N60")));
-//        graphNodes.get("N9").connectToNodeUndirected(graphNodes.get("N17"), calculateDistance(graphNodes.get("N9"), graphNodes.get("N17")));
-//        graphNodes.get("N59").connectToNodeUndirected(graphNodes.get("Notre-Dame Cathedral"), calculateDistance(graphNodes.get("N59"), graphNodes.get("Notre-Dame Cathedral")));
-//        graphNodes.get("N47").connectToNodeUndirected(graphNodes.get("N30"), calculateDistance(graphNodes.get("N47"), graphNodes.get("N30")));
-//        graphNodes.get("N8").connectToNodeUndirected(graphNodes.get("N47"), calculateDistance(graphNodes.get("N8"), graphNodes.get("N47")));
-//        graphNodes.get("N7").connectToNodeUndirected(graphNodes.get("N59"), calculateDistance(graphNodes.get("N7"), graphNodes.get("N59")));
-//        graphNodes.get("N57").connectToNodeUndirected(graphNodes.get("N53"), calculateDistance(graphNodes.get("N57"), graphNodes.get("N53")));
-//        graphNodes.get("N21").connectToNodeUndirected(graphNodes.get("Place de la Concorde"), calculateDistance(graphNodes.get("N21"), graphNodes.get("Place de la Concorde")));
-//        graphNodes.get("Place de la Concorde").connectToNodeUndirected(graphNodes.get("N46"), calculateDistance(graphNodes.get("Place de la Concorde"), graphNodes.get("N46")));
-//        graphNodes.get("Place de la Concorde").connectToNodeUndirected(graphNodes.get("N18"), calculateDistance(graphNodes.get("Place de la Concorde"), graphNodes.get("N18")));
-//        graphNodes.get("N18").connectToNodeUndirected(graphNodes.get("N17"), calculateDistance(graphNodes.get("N18"), graphNodes.get("N17")));
-//        graphNodes.get("N16").connectToNodeUndirected(graphNodes.get("N17"), calculateDistance(graphNodes.get("N16"), graphNodes.get("N17")));
-//        graphNodes.get("N17").connectToNodeUndirected(graphNodes.get("N9"), calculateDistance(graphNodes.get("N17"), graphNodes.get("N9")));
-//        graphNodes.get("N17").connectToNodeUndirected(graphNodes.get("N36"), calculateDistance(graphNodes.get("N17"), graphNodes.get("N36")));
-//        graphNodes.get("N36").connectToNodeUndirected(graphNodes.get("The Centre Pompidou"), calculateDistance(graphNodes.get("N36"), graphNodes.get("The Centre Pompidou")));
-//        graphNodes.get("N18").connectToNodeUndirected(graphNodes.get("N36"), calculateDistance(graphNodes.get("N18"), graphNodes.get("N36")));
-//        graphNodes.get("Eiffel Tower").connectToNodeUndirected(graphNodes.get("N10"), calculateDistance(graphNodes.get("Eiffel Tower"), graphNodes.get("N10")));
-//        graphNodes.get("N10").connectToNodeUndirected(graphNodes.get("N62"), calculateDistance(graphNodes.get("N10"), graphNodes.get("N62")));
-//        graphNodes.get("N62").connectToNodeUndirected(graphNodes.get("N38"), calculateDistance(graphNodes.get("N62"), graphNodes.get("N38")));
-//        graphNodes.get("N38").connectToNodeUndirected(graphNodes.get("N21"), calculateDistance(graphNodes.get("N38"), graphNodes.get("N21")));
-//        graphNodes.get("N21").connectToNodeUndirected(graphNodes.get("N38"), calculateDistance(graphNodes.get("N21"), graphNodes.get("N38")));
-//        graphNodes.get("N46").connectToNodeUndirected(graphNodes.get("N45"), calculateDistance(graphNodes.get("N46"), graphNodes.get("N45")));
-//        graphNodes.get("N45").connectToNodeUndirected(graphNodes.get("N39"), calculateDistance(graphNodes.get("N45"), graphNodes.get("N39")));
-//        graphNodes.get("N39").connectToNodeUndirected(graphNodes.get("The Centre Pompidou"), calculateDistance(graphNodes.get("N39"), graphNodes.get("The Centre Pompidou")));
-//        graphNodes.get("N18").connectToNodeUndirected(graphNodes.get("N45"), calculateDistance(graphNodes.get("N18"), graphNodes.get("N45")));
-//        graphNodes.get("N39").connectToNodeUndirected(graphNodes.get("N43"), calculateDistance(graphNodes.get("N39"), graphNodes.get("N43")));
-//        graphNodes.get("N43").connectToNodeUndirected(graphNodes.get("Pont Alexandre III"), calculateDistance(graphNodes.get("N43"), graphNodes.get("Pont Alexandre III")));
-//        graphNodes.get("N39").connectToNodeUndirected(graphNodes.get("N56"), calculateDistance(graphNodes.get("N39"), graphNodes.get("N56")));
-//        graphNodes.get("N56").connectToNodeUndirected(graphNodes.get("N57"), calculateDistance(graphNodes.get("N56"), graphNodes.get("N57")));
-//        graphNodes.get("N57").connectToNodeUndirected(graphNodes.get("Musée d’Orsay"), calculateDistance(graphNodes.get("N57"), graphNodes.get("Musée d’Orsay")));
-//        graphNodes.get("Musée d’Orsay").connectToNodeUndirected(graphNodes.get("N42"), calculateDistance(graphNodes.get("Musée d’Orsay"), graphNodes.get("N42")));
-//        graphNodes.get("N42").connectToNodeUndirected(graphNodes.get("N50"), calculateDistance(graphNodes.get("N42"), graphNodes.get("N50")));
-//        graphNodes.get("N50").connectToNodeUndirected(graphNodes.get("N51"), calculateDistance(graphNodes.get("N50"), graphNodes.get("N51")));
-//        graphNodes.get("N51").connectToNodeUndirected(graphNodes.get("The Panthéon"), calculateDistance(graphNodes.get("N51"), graphNodes.get("The Panthéon")));
-//        graphNodes.get("Arc de Triomphe").connectToNodeUndirected(graphNodes.get("N20"), calculateDistance(graphNodes.get("Arc de Triomphe"), graphNodes.get("N20")));
-//        graphNodes.get("N20").connectToNodeUndirected(graphNodes.get("N22"), calculateDistance(graphNodes.get("N20"), graphNodes.get("N22")));
-//        graphNodes.get("N22").connectToNodeUndirected(graphNodes.get("The Louvre"), calculateDistance(graphNodes.get("N22"), graphNodes.get("The Louvre")));
-//        graphNodes.get("N22").connectToNodeUndirected(graphNodes.get("N30"), calculateDistance(graphNodes.get("N22"), graphNodes.get("N30")));
-//        graphNodes.get("The Louvre").connectToNodeUndirected(graphNodes.get("N24"), calculateDistance(graphNodes.get("The Louvre"), graphNodes.get("N24")));
-//        graphNodes.get("N24").connectToNodeUndirected(graphNodes.get("N31"), calculateDistance(graphNodes.get("N24"), graphNodes.get("N31")));
-//        graphNodes.get("N30").connectToNodeUndirected(graphNodes.get("N31"), calculateDistance(graphNodes.get("N30"), graphNodes.get("N31")));
-//        graphNodes.get("N24").connectToNodeUndirected(graphNodes.get("N66"), calculateDistance(graphNodes.get("N24"), graphNodes.get("N66")));
-//        graphNodes.get("N27").connectToNodeUndirected(graphNodes.get("N67"), calculateDistance(graphNodes.get("N27"), graphNodes.get("N67")));
-//        graphNodes.get("N67").connectToNodeUndirected(graphNodes.get("N25"), calculateDistance(graphNodes.get("N67"), graphNodes.get("N25")));
-//        graphNodes.get("N30").connectToNodeUndirected(graphNodes.get("N67"), calculateDistance(graphNodes.get("N30"), graphNodes.get("N67")));
-//        graphNodes.get("N31").connectToNodeUndirected(graphNodes.get("N25"), calculateDistance(graphNodes.get("N31"), graphNodes.get("N25")));
-//        graphNodes.get("N25").connectToNodeUndirected(graphNodes.get("N68"), calculateDistance(graphNodes.get("N25"), graphNodes.get("N68")));
-//        graphNodes.get("N68").connectToNodeUndirected(graphNodes.get("River Seine"), calculateDistance(graphNodes.get("N68"), graphNodes.get("River Seine")));
-//        graphNodes.get("N66").connectToNodeUndirected(graphNodes.get("N64"), calculateDistance(graphNodes.get("N66"), graphNodes.get("N64")));
-//        graphNodes.get("River Seine").connectToNodeUndirected(graphNodes.get("N64"), calculateDistance(graphNodes.get("River Seine"), graphNodes.get("N64")));
-//        graphNodes.get("N64").connectToNodeUndirected(graphNodes.get("N29"), calculateDistance(graphNodes.get("N64"), graphNodes.get("N29")));
-//        graphNodes.get("N29").connectToNodeUndirected(graphNodes.get("Basilica of the Sacré-Coeur"), calculateDistance(graphNodes.get("N29"), graphNodes.get("Basilica of the Sacré-Coeur")));
-//        graphNodes.get("Basilica of the Sacré-Coeur").connectToNodeUndirected(graphNodes.get("N55"), calculateDistance(graphNodes.get("Basilica of the Sacré-Coeur"), graphNodes.get("N55")));
-//        graphNodes.get("N55").connectToNodeUndirected(graphNodes.get("The Panthéon"), calculateDistance(graphNodes.get("N55"), graphNodes.get("The Panthéon")));
-//        graphNodes.get("N28").connectToNodeUndirected(graphNodes.get("N49"), calculateDistance(graphNodes.get("N28"), graphNodes.get("N49")));
-//        graphNodes.get("N49").connectToNodeUndirected(graphNodes.get("N34"), calculateDistance(graphNodes.get("N49"), graphNodes.get("N34")));
-//        graphNodes.get("N34").connectToNodeUndirected(graphNodes.get("N42"), calculateDistance(graphNodes.get("N34"), graphNodes.get("N42")));
-//        graphNodes.get("N33").connectToNodeUndirected(graphNodes.get("N63"), calculateDistance(graphNodes.get("N33"), graphNodes.get("N63")));
-//        graphNodes.get("N49").connectToNodeUndirected(graphNodes.get("N63"), calculateDistance(graphNodes.get("N49"), graphNodes.get("N63")));
-//        graphNodes.get("N63").connectToNodeUndirected(graphNodes.get("N48"), calculateDistance(graphNodes.get("N63"), graphNodes.get("N48")));
-//        graphNodes.get("N48").connectToNodeUndirected(graphNodes.get("N32"), calculateDistance(graphNodes.get("N48"), graphNodes.get("N32")));
-//        graphNodes.get("N32").connectToNodeUndirected(graphNodes.get("The Panthéon"), calculateDistance(graphNodes.get("N32"), graphNodes.get("The Panthéon")));
-//        graphNodes.get("N68").connectToNodeUndirected(graphNodes.get("N33"), calculateDistance(graphNodes.get("N68"), graphNodes.get("N33")));
-//        graphNodes.get("N32").connectToNodeUndirected(graphNodes.get("N69"), calculateDistance(graphNodes.get("N32"), graphNodes.get("N69")));
-//        graphNodes.get("N69").connectToNodeUndirected(graphNodes.get("N70"), calculateDistance(graphNodes.get("N69"), graphNodes.get("N70")));
-//        graphNodes.get("N70").connectToNodeUndirected(graphNodes.get("Basilica of the Sacré-Coeur"), calculateDistance(graphNodes.get("N70"), graphNodes.get("Basilica of the Sacré-Coeur")));
-//        graphNodes.get("N29").connectToNodeUndirected(graphNodes.get("N71"), calculateDistance(graphNodes.get("N29"), graphNodes.get("N71")));
-//        graphNodes.get("N71").connectToNodeUndirected(graphNodes.get("The Panthéon"), calculateDistance(graphNodes.get("N71"), graphNodes.get("The Panthéon")));
-//        graphNodes.get("N20").connectToNodeUndirected(graphNodes.get("N72"), calculateDistance(graphNodes.get("N20"), graphNodes.get("N72")));
-//        graphNodes.get("N72").connectToNodeUndirected(graphNodes.get("The Louvre"), calculateDistance(graphNodes.get("N72"), graphNodes.get("The Louvre")));
-//        graphNodes.get("N50").connectToNodeUndirected(graphNodes.get("N54"), calculateDistance(graphNodes.get("N50"), graphNodes.get("N54")));
-//        graphNodes.get("N42").connectToNodeUndirected(graphNodes.get("N54"), calculateDistance(graphNodes.get("N42"), graphNodes.get("N54")));
-//        graphNodes.get("N54").connectToNodeUndirected(graphNodes.get("N51"), calculateDistance(graphNodes.get("N54"), graphNodes.get("N51")));
-//        graphNodes.get("N53").connectToNodeUndirected(graphNodes.get("N52"), calculateDistance(graphNodes.get("N53"), graphNodes.get("N52")));
-//        graphNodes.get("N52").connectToNodeUndirected(graphNodes.get("N54"), calculateDistance(graphNodes.get("N52"), graphNodes.get("N54")));
-//        graphNodes.get("Pont Alexandre III").connectToNodeUndirected(graphNodes.get("N52"), calculateDistance(graphNodes.get("Pont Alexandre III"), graphNodes.get("N52")));
-//
-//        populateMap();
-//
-//        try {
-//            saveXML();
-//            System.out.println("Database saved!");
-//        } catch (Exception e) {
-//            System.err.println("Error writing from file: " + e);
-//        }
+
 
         try {
             loadXML();
@@ -649,26 +436,56 @@ public class RouteFinder implements Initializable {
     public void shortestPathDijkstra() {
         mapPane.getChildren().removeIf(node -> node instanceof Line);
 
-        Graph.CostedPath cpa = findCheapestPathDijkstra(graphNodes.get(startPointBox.getSelectionModel().getSelectedItem().getName()), endPointBox.getSelectionModel().getSelectedItem().getName(), getAvoidNodes( ));
+        // Get start and end nodes
+        GraphNode<String> startNode = graphNodes.get(startPointBox.getSelectionModel().getSelectedItem().getName());
+        GraphNode<String> endNode = graphNodes.get(endPointBox.getSelectionModel().getSelectedItem().getName());
 
-        if (cpa == null || cpa.pathList.isEmpty()) {
-            // Handle the case when no route is found
-            systemMessage.setText("No route found while avoiding selected Landmarks");
-            return; // Exit the method early
+        // Check if waypoints are specified
+        List<GraphNode<String>> waypoints = new ArrayList<>(waypointNodes); // Convert to List<GraphNode<String>>
+
+        // Initialize the path list
+        List<GraphNode<?>> pathList = new ArrayList<>(); // Make sure pathList is of the same type as startNode and endNode
+
+        // If waypoints are specified, find the path considering waypoints
+        if (!waypoints.isEmpty()) {
+            // Add start and end nodes as waypoints if not already included
+            if (!waypoints.contains(startNode)) {
+                waypoints.add(0, startNode);
+            }
+            if (!waypoints.contains(endNode)) {
+                waypoints.add(endNode);
+            }
+            for (int i = 0; i < waypoints.size() - 1; i++) {
+                Graph.CostedPath cpa = findCheapestPathDijkstra(waypoints.get(i), waypoints.get(i + 1).getName(), avoidNodes);
+                if (cpa == null || cpa.pathList.isEmpty()) {
+                    // Handle the case when no route is found
+                    systemMessage.setText("No route found while avoiding selected landmarks");
+                    return; // Exit the method early
+                }
+                // Add the path to the overall path list
+                pathList.addAll(cpa.pathList);
+            }
+        } else {
+            // No waypoints specified, find the direct path between start and end nodes
+            Graph.CostedPath cpa = findCheapestPathDijkstra(startNode, endNode.getName(), avoidNodes);
+            if (cpa == null || cpa.pathList.isEmpty()) {
+                // Handle the case when no route is found
+                systemMessage.setText("No route found while avoiding selected landmarks");
+                return; // Exit the method early
+            }
+            pathList = cpa.pathList;
         }
 
-        // If a route is found, continue with visualization
-        for (GraphNode<?> n : cpa.pathList)
-            clearFeedback();
-
-        systemMessage.setText("Shortest Path from " + startPointBox.getSelectionModel().getSelectedItem().getName() + " to " + endPointBox.getSelectionModel().getSelectedItem().getName() + " using Dijkstra's Algorithm"
-        +"\nRoute Cost: " + cpa.pathCost);
+        // Visualize the path
+        visualizePath(pathList);
+    }
 
 
 
-        for (int i = 0; i < cpa.pathList.size() - 1; i++) {
-            GraphNode<?> firstNode = cpa.pathList.get(i);
-            GraphNode<?> secondNode = cpa.pathList.get(i + 1);
+    private void visualizePath(List<GraphNode<?>> pathList) {
+        for (int i = 0; i < pathList.size() - 1; i++) {
+            GraphNode<?> firstNode = pathList.get(i);
+            GraphNode<?> secondNode = pathList.get(i + 1);
 
             Line line = new Line(firstNode.getGraphX(), firstNode.getGraphY(), secondNode.getGraphX(), secondNode.getGraphY());
             line.setStroke(route);
@@ -676,7 +493,11 @@ public class RouteFinder implements Initializable {
 
             mapPane.getChildren().add(line);
         }
+        systemMessage.setText("Shortest Path from " + startPointBox.getSelectionModel().getSelectedItem().getName() + " to " + endPointBox.getSelectionModel().getSelectedItem().getName() + " using Dijkstra's Algorithm");
     }
+
+
+
 
     public Set<GraphNode<String>> getAvoidNodes() {
         if(avoidBox.getSelectionModel().getSelectedItem() == null || avoidBox.getSelectionModel().getSelectedItem().getName().equals("AVOID NONE")) {
@@ -689,16 +510,10 @@ public class RouteFinder implements Initializable {
         return avoidNodes;
     }
 
-    public Set<GraphNode<String>> getVisitNodes() {
-        if(visitBox.getSelectionModel().getSelectedItem() == null || visitBox.getSelectionModel().getSelectedItem().getName().equals("MUST VISIT NONE")) {
-            if(visitNodes != null) {
-                visitNodes.clear();
-            }
 
-        }
 
-        return visitNodes;
-    }
+
+
 
     public void clearFeedback() {
 
@@ -709,6 +524,11 @@ public class RouteFinder implements Initializable {
             systemMessage.setText(null);
         }
     }
+
+
+
+
+
 
     public void shortestPathBFS() {
         clearAllCircles();
@@ -770,7 +590,6 @@ public class RouteFinder implements Initializable {
             }
         }
     }
-
     private static String calculateAndFormatTime(double distance, double speed) {
         double timeInHours = distance / speed;
         int hours = (int) timeInHours;
@@ -778,12 +597,14 @@ public class RouteFinder implements Initializable {
         return String.format("%d hr %d m", hours, minutes);
     }
 
-    public double pixelToKilometers(double distanceInPixels, double pixelsPerKilometer) {
+
+    public static double pixelToKilometers(double distanceInPixels, double pixelsPerKilometer) {
         // Convert pixels to kilometers
         double distanceInKilometers = distanceInPixels / pixelsPerKilometer;
 
         return Math.round(distanceInKilometers * 100.0) / 100.0;
     }
+
 
     public void shortestPathDFS() {
         mapPane.getChildren().removeIf(node -> node instanceof Line);
@@ -803,6 +624,8 @@ public class RouteFinder implements Initializable {
         }
 
     }
+
+
 
     public void dfsPathDisplay() {
         if (dfsListView.getSelectionModel().getSelectedItem() != null) {
@@ -830,6 +653,9 @@ public class RouteFinder implements Initializable {
         }
     }
 
+
+
+
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
         routeFinder = this;
@@ -843,11 +669,9 @@ public class RouteFinder implements Initializable {
 
     }
 
-    public void clearFields(){
-        nameField.clear();
-        landmarkBox.setSelected(false);
-         junctionBox.setSelected(false);
-    }
+
+
+
 
     public void closeApp(){
         System.exit(0);
@@ -856,5 +680,19 @@ public class RouteFinder implements Initializable {
     public void minimiseApp(){
 
         mainStage.setIconified(true);
+    }
+
+
+    public void removeWaypoint(ActionEvent actionEvent) {
+        visitLabel.setText("");
+        GraphNode<String> selected = waypointsBox.getSelectionModel().getSelectedItem();
+        if(!waypointNodes.isEmpty()){
+            waypointNodes.remove(selected);
+
+        }
+        clearFeedback();
+        printAvoidNodes();
+        showSelectedNodes();
+
     }
 }
